collapses on accomodation fixed

--- a/src/Styles/Components/Collapses/Collapses.scss
+++ b/src/Styles/Components/Collapses/Collapses.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: fit-content;
     position: relative;
     background-color: Colors.$color-1;
     border-radius: 5px;
